fixed spacing

--- a/peep/static/main.css
+++ b/peep/static/main.css
@@ -168,7 +168,7 @@ body {
   .button-style{
     height: 40px;
     width: 200px;
-    background: rgba(204, 204, 204, 0.5);
+    background: rgba(40, 40, 40, 0.8);
     position: absolute;
   }
   .col-lg {
@@ -194,11 +194,10 @@ body {
  .wrapper {
   display: grid;
   grid-template-columns: auto auto auto;
-  margin-bottom: 30px;
   /* grid-template-rows: 250px 250px 250px 250px; */
  }
 
 .image-content{
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
